--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,5 +5,11 @@
   <%= @post.body %>
 </p>
 
+<%#= image_tag(@post.image) %>
+
+<% (0...@post.images.count).each do |image| %>
+  <%= image_tag(@post.thumbnail(image)) %> <br>
+<% end %>
+
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
